--- a/css/css-main.css
+++ b/css/css-main.css
@@ -27,8 +27,12 @@
     border-bottom: solid 1px rgba(255, 255, 255, 0.315);
 }
 
+.bg-opacite {
+    background-color: rgb(0, 0, 0, 0.8);
+}
+
 .container-header {
-    background: url(../img/header.jpg) no-repeat center;
+    background: url(../img/header\ -\ copie.jpg) no-repeat center;
     background-size: cover;
 }
 
@@ -58,6 +62,7 @@
 }
 
 h4 {
+    font-family: courgette;
     font-size: 1.40rem;
 }
 
@@ -68,10 +73,55 @@ h4 {
 
 .lien-autres {
     font-family: oswald;
+    padding-left: 0px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.articles-precedents {
+    text-decoration: none;
+    color: black;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+}
+
+.categories {
     padding-top: 24px;
 }
 
+ul {
+    font-size: 0.75rem;
+    font-family: oswald;
+    list-style: none;
+    text-decoration: underline;
+}
+
 a {
-    text-decoration: none;
+    color: white;
+}
+
+h6 {
+    font-family: courgette;
+}
+
+form {
+    padding-bottom: 24px;
+}
+
+.btn {
+    color: white;
+    border: solid 1px;
+}
+
+.fab {
+    background-color: white;
     color: black;
+    padding: 8px;
+}
+
+#icones-liens {
+    display: inline;
 }
