--- a/css/css-main.css
+++ b/css/css-main.css
@@ -86,6 +86,7 @@ h4 {
 .footer {
     background-color: black;
     color: white;
+    padding-bottom: 32px;
 }
 
 .categories {
@@ -124,4 +125,24 @@ form {
 
 #icones-liens {
     display: inline;
+    padding-bottom: 24px;
+}
+
+.inline {
+    display: inline;
+}
+
+@media only screen and (max-width: 1024px) {
+    .art {
+        padding-bottom: 24px;
+    }
+    .titre-articles {
+        padding-top: 0px;
+    }
+    h4 {
+        font-size: 1.3rem
+    }
+    .texte-articles {
+        font-size: 0.8rem;
+    }
 }
