--- a/css/css-main.css
+++ b/css/css-main.css
@@ -109,6 +109,10 @@ ul {
     text-decoration: underline;
 }
 
+.liens-footer {
+    padding-inline-start: 0px;
+}
+
 a {
     color: white;
 }
@@ -134,6 +138,7 @@ form {
 
 #icones-liens {
     display: inline;
+    padding-left: 0px;
     padding-bottom: 24px;
     text-decoration: none;
 }
@@ -142,7 +147,7 @@ form {
     display: inline;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 992px) {
     .art {
         padding-bottom: 24px;
     }
@@ -150,7 +155,7 @@ form {
         padding-top: 0px;
     }
     h4 {
-        font-size: 1.2rem
+        font-size: 1.3rem
     }
     .texte-articles {
         font-size: 0.8rem;
